Fixed header tag missing bracket on line 18

--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
         <span><a href="#month">Featured Tea</a></span>
         <span><a href="#locations">Locations</a></span>
       </nav>
-    </header
+    </header>
     <div id="mission">
       <div class="content">
         <h2>Our Mission</h2>
