--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,7 @@
       <div id="logo">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" />
       </div>
+      <!-- test comment -->
       <nav>
         <span><a href="#mission">Mission</a></span>
         <span><a href="#month">Featured Tea</a></span>
